change script to respond to multiple events; add a possibility to post comments to issues

--- a/repos.json.example
+++ b/repos.json.example
@@ -1,5 +1,16 @@
 {
-    "razius/puppet": {
-        "path": "/home/puppet"
+    "aAXEe/test-web::push": {
+        "key": "secret_42",
+        "action": [
+          ["echo", "push"],
+          ["echo", "full name: {full_name}"]
+        ]
+    },
+    "aAXEe/test-web::pull_request": {
+        "key": "secret_42",
+        "action": [
+          ["echo", "pull_request number {issue_number}"]
+        ],
+        "bot_comment": "Hello world from a bot.<br>I can expand vars: {request_sha} #{issue_number}"
     }
 }
